--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -2,6 +2,7 @@ include /../node_modules/bemto.jade/bemto
 include /../node_modules/jade-injected/jade-injected
 include ../page/page
 include ../scripts/scripts
+include ../block1/block1
 
 doctype html
 html(lang='ru')
@@ -9,3 +10,4 @@ html(lang='ru')
 	+page
 		block content
 		+scripts(['app.min.js'])
+		+block1
