--- a/app/blocks/block1/block1.styl
+++ b/app/blocks/block1/block1.styl
@@ -1,5 +1,16 @@
+#bitrix
+	display none
+a:-webkit-any-link
+	text-decoration: none
+
+a:hover
+	border-bottom: 1px solid #e74c3c
+
+a:active
+	color white
 body
 	background-color #2980b9
+	//3498db
 .block1
 	display flex
 	flex-direction: column
@@ -43,7 +54,7 @@ body
 	display flex
 	flex-direction: column
 	font-family: Calibri
-	font-size 21pt
+	font-size 17pt
 	color #ecf0f1
 
 .center_container
@@ -96,4 +107,8 @@ body
 	width 100%
 	height 43px
 	background-image url(../images/decor_line.png)
+
+.center_block1
+	align-items: center
+
 
