--- a/app/blocks/block2/block2.styl
+++ b/app/blocks/block2/block2.styl
@@ -1,2 +1,30 @@
 .block2
-	display block
+	display flex
+	flex-direction: column
+	align-items: center
+	justify-content: space-around
+
+.block2_center_content
+	width 100%
+
+.block2_background
+	pos: rel
+	width 1033px
+	height 803px
+	background-image: url(../images/background_block2.png)
+
+.text_in_menu_block2
+	color #4a6289
+	margin-bottom 400px
+	font-family Cambria
+	line-height: 1.7
+	letter-spacing -1px
+
+.img_logo
+	margin-top 45px
+
+.img_decor_line_Zindex
+	position absolute
+	margin-bottom 100px
+	z-index -1
+	top 1500px
