--- a/app/blocks/block1/block1.jade
+++ b/app/blocks/block1/block1.jade
@@ -3,12 +3,9 @@ mixin block1()
 		+b.top_menu_container
 			+b(src='assets/images/amocrm-logo-dark.png')
 			+b.item_menu_container
-				+b.text_in_menu Решения
-					+b(src='assets/images/underline.png')
-				+b.text_in_menu Преимущества
-					+b(src='assets/images/underline.png')
-				+b.text_in_menu Функции
-					+b(src='assets/images/underline.png')
+				a(href='#1').text_in_menu.center_block1 Решения
+				a(href='#2').text_in_menu Преимущества
+				a(href='#3').text_in_menu.center_block1 Возможности
 		+b.center_container
 			+b.text_header
 				| Удобная web программа для анализа продаж,
